# three-way

./: .env.example  .gitignore  AI.md  CLAUDE.md  LICENSE  README.md  pyproject.toml
docs/: how_to_update_models.md  project_roadmap.md
notebooks/: 01_data_models.ipynb  02_config.ipynb  03_timer.ipynb  04_services.ipynb  05_config_and_pricing_updates.ipynb
src/three_way/: __init__.py
src/three_way/core/: config.py
src/three_way/models/: chat.py
src/three_way/services/: arena.py  claude_client.py  gemini_client.py  openai_client.py
src/three_way/ui/: app.py  constants.py  css.py  handlers.py  helpers.py
src/three_way/ui/components/: header.py  input_bar.py  modals.py  panels.py
src/three_way/utils/: logging_setup.py  timer.py
